--- a/app/globals.css
+++ b/app/globals.css
@@ -6,10 +6,8 @@
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-display: var(--font-gambarino);
+  --font-sans: var(--font-raleway);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +21,27 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Persistent Elements */
+.navbar {
+  view-transition-name: navbar;
+}
+
+.nav-drawer-blur {
+  view-transition-name: nav-drawer-blur;
+}
+
+.nav-drawer {
+  view-transition-name: nav-drawer;
+}
+
+/* Reduced Motion Preferences */
+@media (prefers-reduced-motion: reduce) {
+  ::view-transition,
+  ::view-transition-group(*),
+  ::view-transition-old(*),
+  ::view-transition-new(*) {
+    animation-duration: 0.001s;
+  }
 }
