--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,16 @@
 @import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+form > div {
+  @apply flex flex-col gap-2;
+}
+
+input,
+textarea {
+  @apply shadow-md px-6 py-2 border border-slate-300
+}
 
 /* Background Effects */
 .glow-background {
